aligned all horizontal paddings on all pages to be the same. made all the buttons appear from the bottom of their containers, and fixed the three main buttons appearing off their container.

--- a/src/components/Biudzeto-ispl/BP9global.css
+++ b/src/components/Biudzeto-ispl/BP9global.css
@@ -86,7 +86,7 @@
     justify-content: center;
 
     position: absolute;
-    bottom: 10%;
+    bottom: 15px;
 }
 
 .BP9button:hover {
