--- a/src/components/Islaidu-ispl/Islaidu-ispl/Islaidu-ispl.css
+++ b/src/components/Islaidu-ispl/Islaidu-ispl/Islaidu-ispl.css
@@ -69,6 +69,16 @@ buttons
 }
 .Main-btn {
     position: static;
+    width: 90%;
+    height: 41px;
+    border-radius: 40px;   
+    border:  none;
+    position: absolute;
+    bottom: 15px;
+}
+
+.Main-btn2 {
+    position: static;
     width: 100%;
     height: 41px;
     border-radius: 40px;   
