--- a/src/components/Pajamu-ispl/Pajamu-ispl/Pajamu-ispl.css
+++ b/src/components/Pajamu-ispl/Pajamu-ispl/Pajamu-ispl.css
@@ -118,6 +118,8 @@ buttons
     border-radius: 10px;
     padding: 0px 17px;
     border-radius: 30px;
+
+    position: relative;
 }
 
 
@@ -125,6 +127,7 @@ buttons
     background: white;
     border-radius: 30px;
     padding: 0 5%;
+    position: relative;
 }
 .IncomeSearch-title {
     margin-bottom: 35px;
